fixed wls_server provider